<resources>
    <string name="app_name">PrefecturaILB</string>
    <string name="action_lightTheme">Light Theme(Selected)</string>
    <string name="action_DarkTheme">Dark Theme</string>

    <string name="label_dialog_add">Añadir</string>
    <string name="label_dialog_cancel">Cancelar</string>
    <string name="label_dialog_delete">Eliminar</string>
    <string name="from">from</string>
    <string name="logoapp">logoApp</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="pasw">Contraseña</string>
    <string name="email">Correo Electrónico</string>
    <string name="splash_description">Splash screen</string>
    <string name="error_connection">Ha ocurrido un error en la conexión</string>
    <string name="error_email">El correo es incorrecto</string>
    <string name="error_invalid_credencial">Usuario u contraseña Invalidos</string>
    <string name="btn_sign_out">Cerrar Sesión</string>
    <string name="error_user_not_register">Usuario no registrado</string>
    <string name="helper_correo">Ingrese su correo electrónico</string>
    <string name="helper_password">Ingrese su contraseña</string>
    <string name="error_internet">Verifique su conexión de internet</string>
    <string name="error_unknown">Imposible iniciar sesión en este momento, intente mas tarde.</string>
    <string name="btn_busqueda">BÚSQUEDA</string>
    <string name="btn_pasar_lista">PASAR LISTA</string>
    <string name="menu_settings">Propiedades</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="name_materia">Nombre de la materia</string>
    <string name="error_canceled">La operación ha sido cancelada.</string>
    <string name="error_qr_format">Ha escaneado un QR con un formato incorrecto.</string>
    <string name="user_success">Se han obtenido los datos del usuario.</string>
</resources>
